<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_text_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingHorizontal="8dp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:inputType="textShortMessage|textCapWords"
        android:gravity="center_horizontal"
        android:autofillHints="username"
        android:importantForAutofill="no"
        android:hint="@string/new_recipe_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/apply_new_recipe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/add"
        app:layout_constraintTop_toBottomOf="@id/edit_text_recipe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/recipe_cancel_button" />

    <Button
        android:id="@+id/recipe_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/ingredient_cancel_button_label"
        app:layout_constraintTop_toBottomOf="@id/edit_text_recipe"
        app:layout_constraintStart_toEndOf="@id/apply_new_recipe_button"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>